# MechMania-2016-AI

./: CMakeLists.txt  README.md  main.cpp  testinput.json
src/: Action.cpp  Action.h  CMakeLists.txt  Character.cpp  Character.h  DecisionTree.cpp  DecisionTree.h  GameMap.cpp  GameMap.h  State.cpp  State.h
test/: CMakeLists.txt
test/basic_tests/: ActionTest.cpp  CMakeLists.txt  GameMapTest.cpp  StateTest.cpp
